--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Currículo WEB</title>
+        <title>Alfredo Xavier - Currículo WEB</title>
         <link rel="icon" type="image/x-icon" href="assets/img/icon.jpg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiência</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Formação acadêmica</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Premiações e Trabalhos importantes</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Premiações</a></li>
                 </ul>
             </div>
         </nav>
@@ -44,7 +44,7 @@
                 <hr class="m-0" />
                 
                 <p> <div class="subheading mb-5">Av. Gregório Aversa, 127, 206A <br> São Carlos-SP | 13571-260 </p>
-                    <p><a class="social-icon" href="https://wa.me/5516997928260" target="_blank"><i class="fab fa-whatsapp"></i> (16) 997928260 </p></a>
+                    <p><a class="social-icon" href="https://wa.me/5516997928260" target="_blank"><i class="fab fa-whatsapp"></i> +55 (16) 997928260 </p></a>
                     <p><a class="social-icon" href="mailto:alfredoapxavier@gmail.com" target="_blank"><i class="fa fa-envelope"></i> alfredoapxavier@gmail.com</a></p>
                 </div>
                   <hr class="m-0" />
