--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">Alfredo Xavier</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile1.jpg" alt="" /></span></a
-            ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span></button>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Alfredo Xavier</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile1.jpg" alt="" /></span></a>
+                <a href='index.html'><img class="img-flag" src="assets/flags/br.svg"></a>
+                <a href='index_us.html'><img class="img-flag" src="assets/flags/us.svg"></a>            
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre</a></li>
@@ -51,11 +54,12 @@
                   <hr class="m-0" />
                     <h2 class="mb-5">Sobre</h2>
                     <p class="lead mb-5">Apaixonado por tecnologia, ciência e inovação, bacharel em Química pela Universidade Federal de São Carlos (UFSCar), mestre e doutor pela Universidade de São Paulo (USP). 
-                        Possui experiência em análises instrumentais, como FAAS, ICP-OES, LIBS, fluorescência, para fins de geração de dados de referência para modelagem (machine learning) utilizando quimiometria 
-                        (química, matemática, estatística e computação), análise e ciência de dados (ETL), com aplicações em linguagem de programação como MATLAB e Python (pandas, Numpy, scikit-learn, scipy, PyQt, PySide6, matplotlib, plotly e seaborn).
-                         Temas ambientais com foco agrícola tais estoque de carbono, sequestro de carbono, mercado de crédito de carbono, humificação da matéria orgânica do solo, sistemas de pastagem, reuso de subprodutos agrícolas, 
-                         foram muito abordados nos trabalhos de mestrado e doutorado. Experiência em ISO 17025 como auditor interno e líder integrante da equipe técnica de implementação da gestão da qualidade, bem como na validação de métodos analíticos
-                         com LIBS.</p>
+                        Possui experiência em análises instrumentais, como FAAS, CHNS, ICP-OES, LIBS, fluorescência, para fins de geração de dados de referência para modelagem (machine learning) utilizando quimiometria 
+                        (química, matemática, estatística e computação), análise e ciência de dados (ETL), a partir de linguagens de programação como MATLAB e Python (pandas, Numpy, scikit-learn, scipy, PyQt, PySide6, matplotlib, plotly e seaborn).
+                         Temas ambientais com foco agrônomico tais estoque de carbono, sequestro de carbono, mercado de crédito de carbono, grau de humificação da matéria orgânica do solo, sistemas de pastagem, reuso de subprodutos agrícolas, 
+                         foram focos nos trabalhos de mestrado e doutorado. Atualmente atua como cientista de dados pleno na <a href="https://agrorobotica.com.br/" target="_blank">AGROROBÓTICA </a> no desenvolvimento de modelos de predição utilizando técnicas fotônicas e também 
+                         na colaboração no desenvolvimento de invetários de crédito de carbono junto à equipe de sustentabilidade; possui experiência em ISO 17025 como auditor interno e líder integrante da equipe técnica 
+                         de implementação da gestão da qualidade na empresa, bem como na validação de métodos analíticos com LIBS.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/alfredoapxavier/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/alfredoxavier" target="_blank"><i class="fab fa-github"></i></a>
@@ -85,8 +89,9 @@
                             <li> Encarregado pela interface entre os dados gerados pelos métodos tradicionais de análise química do solos e a plataforma de inteligência artificial AGLIBS;</li> 
                             <li> Integrante do time de análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de modelos multivariados de predição, classificação e determinação, exploração de dados temporais e controle estatístico de processos;</li>
                             <li> Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando LIBS;</li>
-                            <li> Coordenação da geração e emissão de laudos comerciais utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação WEB (HTML + CSS + JavaScript))</li>
+                            <li> Coordenação da geração e emissão de laudos comerciais utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (HTML + CSS + JavaScript))</li>
                             <li> Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt).</li>
+                            <li> Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade</li>
                             </ul>
                            </div>
                         <div class="flex-shrink-0"><span class="text-primary">Janeiro 2021 - atualmente</span></div>
@@ -128,7 +133,7 @@
                                 <a href="https://teses.usp.br/teses/disponiveis/75/75135/tde-04022020-160742/pt-br.php" target="_blank"> "Reuso de resíduos da indústria sucroalcooleira: 
                                 Impacto na qualidade do solo e novos métodos de caracterização utilizando LIBS"</a>. O primeiro objetivo do trabalho foi o estudo dos efeitos da aplicação de resíduos da industria sucroalcooleira, 
                                 tais como torta de filtro e cinzas de bagaço de cana-de-açúcar, em solos na forma de biofertilizantes tanto do ponto de vista de matéria orgânica (MOS)
-                                e sua índice de humificação durante a evolução temporal. Já o segundo foi o desenvolvimento e validação de métodos para a quantificação de macro e micronutrientes presentes nos resíduos 
+                                e o índice de humificação durante a evolução temporal. Já o segundo foi o desenvolvimento e validação de métodos para a quantificação de macro e micronutrientes presentes nos resíduos 
                                 e o potencial para fertilização utilizando técnicas como a Espectroscopia de Absorção Atômica (FAAS) e digestão tanto em bloco aberto quanto assistida por microondas e a 
                                 Espectrometria de emissão óptica com plasma induzido por laser (LIBS).</li><br>
                             </ul>
@@ -143,12 +148,12 @@
                             <ul>
                             <li> Desenvolvimento do trabalho no Laboratório de Óptica e Fotônica da Embrapa Instrumentação (São Carlos-SP), sob a orientação da Dra. Débora Marcondes Bastos Pereira Milori. O trabalho intitulado 
                                 <a href="https://teses.usp.br/teses/disponiveis/75/75135/tde-10122014-101014/pt-br.php" target="_blank">"Avaliação do acúmulo e emissão de carbono do solo sob sistemas produtivos de pastagem"</a>. 
-                                O trabalho teve como objetivo foi avaliar manejos do sistema produtivo de pecuária, em pastagens de Brachiaria decumbens. O foco principal do trabalho foi a avaliação da dinâmica de carbono no solo, 
+                                O trabalho teve como objetivo foi avaliar manejos do sistema produtivo de pecuária, em pastagens de <i>Brachiaria decumbens</i>. O foco principal do trabalho foi a avaliação da dinâmica de carbono no solo, 
                                 ou seja, sequestro de C-CO<sub>2</sub> e a emissão dos gases do efeito estufa, através da execução de boas práticas de manejo. Várias estratégias de cálculo de estoque de carbono (EC) e 
                                 avaliação do efeito dos manejos foram consideradas. Foram avaliados solos de sistemas produtivos de pastagem com enfoque na matéria orgânica do solo utilizando técnicas espectroscópicas 
                                 tais como a Espectroscopia de Fluorescência Induzida por Laser (LIFS) e a Espectroscopia de Emissão Óptica com Plasma Induzido por Laser (LIBS)na construção e validação de métodos para 
-                                quantificações elementares.
-                                Essa dissertação de mestrado foi vencedora nacional do Prêmio Vale-Capes de Ciência e Sustentabilidade 2016, como melhor dissertação na área de Redução de Gases do efeito estufa (GEE).</li><br> 
+                                quantificações elementares. 
+                                <p> Essa dissertação de mestrado foi vencedora nacional do Prêmio Vale-Capes de Ciência e Sustentabilidade 2016, como melhor dissertação na área de Redução de Gases do efeito estufa (GEE).</p></li><br> 
                             </ul>
                             </div>
                         <div class="flex-shrink-0"><span class="text-primary">Fevereiro 2012 - Maio de 2014</span></div>
@@ -189,7 +194,11 @@
                             </ul>
                             <h6>Artigos publicados:</h6>
                             <ul>
-                            <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S0026265X19308197" target="_blank">Evaluation of carbon content and humification index of soils under the application of by-products from sugarcane processing.</a> </li>
+                                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S0026265X19308197" target="_blank">Evaluation of carbon content and humification index of soils under the application of by-products from sugarcane processing.</a> </li>
+                                <li><a href="https://doi.org/10.1016/j.microc.2021.106125" target="_blank">Multi-elemental analysis of landfill leachates by single and double pulse laser-induced breakdown spectroscopy.</a> </li>
+                                <li><a href="https://doi.org/10.1016/j.still.2021.105001" target="_blank">Evaluation of soil organic matter from integrated production systems using laser-induced fluorescence spectroscopy.</a> </li>
+                                <li><a href="https://doi.org/10.1007/s12161-020-01790-8" target="_blank">Laser-Induced Breakdown Spectroscopy as a Powerful Tool for Distinguishing High- and Low-Vigor Soybean Seed Lots.</a> </li>
+                                <li><a href="http://dx.doi.org/10.1039/d2ay01424f" target="_blank">Carbon quantification in soils with different textures using laser-induced breakdown spectroscopy: spectral interference correction and method for 3D plane model.</a> </li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Fevereiro 2015 - Outubro 2019</span></div>
