Correção do ingles no About

--- a/index_us.html
+++ b/index_us.html
@@ -54,14 +54,15 @@
                 </div>
                   <hr class="m-0" />
                     <h2 class="mb-5">About</h2>
-                    <p class="lead mb-5">Passionate about technology, science and innovation, bachelor in Chemistry by Federal University of São Carlos (UFSCar), master's and a doctorate by University of São Paulo (USP).
-                        Experience in instrumental analysis such as FAAS, CHNS, ICP-OES, LIBS, fluorescence, aiming of generating reference data for modeling (machine learning) using chemometrics, 
-                        (chemistry, mathematics, statistics and computing), data analysis and data science (ETL), with applications in programming languages ​​such as MATLAB and Python 
-                        (pandas, Numpy, scikit-learn, scipy, PyQt, PySide6, matplotlib, plotly and seaborn). Environmental issues with an agricultural focus such as carbon stock, carbon sequestration, carbon credit market, 
-                        humification degree of soil organic matter, grazing systems, use of agricultural by-products, were very studied in the master's and master's work. 
-                        Currently works as a full data scientist at <a href="https://agrorobotica.com.br/" target="_blank">AGROROBÓTICA </a> in the development of prediction models using photonic techniques and also in the collaboration in the development of carbon 
-                        credit inventories with the sustainability team; has experience in ISO 17025 as an internal auditor and an integral leader of the technical team implementation of quality management in the company, 
-                        as well as the validation of analytical methods with LIBS.</p>
+                    <p class="lead mb-5">
+                        Passionate about technology, science, and innovation, has a bachelor's degree in Chemistry from the Federal University of São Carlos (UFSCar), and both master's and Ph.D. degrees from 
+                        the University of São Paulo (USP). Experience in instrumental analysis such as FAAS, CHNS, ICP-OES, LIBS, and fluorescence. Experience in generating reference data for modeling (machine learning)
+                         using chemometrics, (chemistry, mathematics, statistics, and computing), data analysis, and data science (ETL), with applications in programming languages ​​such as MATLAB and Python 
+                         (pandas, Numpy, scikit-learn, scipy, PyQt, PySide6, matplotlib, plotly and seaborn). Builds the bridge between computer science and environmental issues with an agricultural focus 
+                         such as carbon stock, carbon sequestration, carbon credit market, humification degree of soil organic matter, and grazing systems. Has an extensive study on the use of agricultural by-products. 
+                         Currently works as a full data scientist at <a href="https://agrorobotica.com.br/" target="_blank">AGROROBÓTICA</a> in the development of prediction models using photonic techniques and also in the collaboration in the development of 
+                         carbon credit inventories with the sustainability team; has experience in ISO 17025 as an internal auditor and an integral leader of the technical team implementation of quality management 
+                         in the company, as well as the validation of analytical methods with LIBS.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/alfredoapxavier/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/alfredoxavier" target="_blank"><i class="fab fa-github"></i></a>
