--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                 <li> Tópicos em Química: Quimiometria III </li>
                                 <li> Química Ambiental </li>
                                 <li> Métodos Cromatográficos de Análise </li>
-                                <li> Monitoria em Docência do Programa de Aperfeiçoamento de Ensino junto à disciplina SQM0411 - Análises Quantitativas: Prática </li>
+                                <li> Monitoria em docência do Programa de Aperfeiçoamento de Ensino junto à disciplina SQM0411 - Análises Quantitativas: Prática </li>
                             </ul>
                             <h6>Artigos publicados:</h6>
                             <ul>
@@ -278,8 +278,11 @@
                     <div class="subheading mb-3">Cursos</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>ISO 17025 - Líder e integrante da equipe técnica na implementação do sistema da qualidade na AGROBÓTICA. 
-                            <p>Certificado de auditor interno e determinação de incertezas – (Solugest 2021)</p>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>2021 - ISO 17025 - Líder e integrante da equipe técnica na implementação do sistema da qualidade na AGROBÓTICA. 
+                            <span class="fa-li"><i class="fas fa-check"></i></span>2021 - Sistema de Gestão de Laboratório conforme a NBR ISO/IEC 17025:2017 (8 horas) - Solugest 
+                            <span class="fa-li"><i class="fas fa-check"></i></span>2021 - Determinação de Incerteza de Medição e Validação de Métodos de Ensaio e de Calibração (8 horas) - Solugest
+                            <span class="fa-li"><i class="fas fa-check"></i></span>2021 - Auditorias Internas de Sistema de Gestão de Laboratório NBR ISO/IEC 17025:2017 (8 horas) - Solugest
+                            <span class="fa-li"><i class="fas fa-check"></i></span>2021 - Inventários de gases de efeito estufa, fontes e sumidouros em áreas agrícolas (8 horas) - Fundação de Apoio a Pesquisa, Ensino e Extensão - Funep</p>
                         </li>
                     </ul>
                     
