--- a/index.html
+++ b/index.html
@@ -277,13 +277,12 @@
 
                     <div class="subheading mb-3">Cursos</div>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>2021 - ISO 17025 - Líder e integrante da equipe técnica na implementação do sistema da qualidade na AGROBÓTICA. 
-                            <span class="fa-li"><i class="fas fa-check"></i></span>2021 - Sistema de Gestão de Laboratório conforme a NBR ISO/IEC 17025:2017 (8 horas) - Solugest 
-                            <span class="fa-li"><i class="fas fa-check"></i></span>2021 - Determinação de Incerteza de Medição e Validação de Métodos de Ensaio e de Calibração (8 horas) - Solugest
-                            <span class="fa-li"><i class="fas fa-check"></i></span>2021 - Auditorias Internas de Sistema de Gestão de Laboratório NBR ISO/IEC 17025:2017 (8 horas) - Solugest
-                            <span class="fa-li"><i class="fas fa-check"></i></span>2021 - Inventários de gases de efeito estufa, fontes e sumidouros em áreas agrícolas (8 horas) - Fundação de Apoio a Pesquisa, Ensino e Extensão - Funep</p>
-                        </li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>2021 - ISO 17025 - Líder e integrante da equipe técnica na implementação do sistema da qualidade na AGROBÓTICA.</li> 
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>2021 - Sistema de Gestão de Laboratório conforme a NBR ISO/IEC 17025:2017 (8 horas) - Solugest </li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>2021 - Determinação de Incerteza de Medição e Validação de Métodos de Ensaio e de Calibração (8 horas) - Solugest</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>2021 - Auditorias Internas de Sistema de Gestão de Laboratório NBR ISO/IEC 17025:2017 (8 horas) - Solugest</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>2021 - Inventários de gases de efeito estufa, fontes e sumidouros em áreas agrícolas (8 horas) - Fundação de Apoio a Pesquisa, Ensino e Extensão - Funep</li>
+                        
                     </ul>
                     
                 </div>
