--- a/index_us.html
+++ b/index_us.html
@@ -60,7 +60,7 @@
                          using chemometrics, (chemistry, mathematics, statistics, and computing), data analysis, and data science (ETL), with applications in programming languages ​​such as MATLAB and Python 
                          (pandas, Numpy, scikit-learn, scipy, PyQt, PySide6, matplotlib, plotly and seaborn). Builds the bridge between computer science and environmental issues with an agricultural focus 
                          such as carbon stock, carbon sequestration, carbon credit market, humification degree of soil organic matter, and grazing systems. Has an extensive study on the use of agricultural by-products. 
-                         Currently works as a full data scientist at <a href="https://agrorobotica.com.br/" target="_blank">AGROROBÓTICA</a> in the development of prediction models using photonic techniques and also in the collaboration in the development of 
+                         Currently works as a full data scientist at AGROROBÓTICA in the development of prediction models using photonic techniques and also in the collaboration in the development of 
                          carbon credit inventories with the sustainability team; has experience in ISO 17025 as an internal auditor and an integral leader of the technical team implementation of quality management 
                          in the company, as well as the validation of analytical methods with LIBS.</p>
                     <div class="social-icons">
