--- a/index_us.html
+++ b/index_us.html
@@ -279,7 +279,7 @@
 
                     <div class="subheading mb-3">Courses</div>
                     <ul class="fa-ul mb-0">
-                        <li><span class="fa-li"><i class="fas fa-check"></span></i> 2021 - ISO 17025 - Leader and member of the technical team in the implementation of the quality system at AGROBÓTICA.</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>2021 - ISO 17025 - Leader and member of the technical team in the implementation of the quality system at AGROROBÓTICA.</li>
                         <li><span class="fa-li"><i class="fas fa-check"></i></span>2021 - Laboratory Management System according to NBR ISO/IEC 17025:2017 (8 horas) - Solugest</li> 
                         <li><span class="fa-li"><i class="fas fa-check"></i></span>2021 - Determination of Measurement Uncertainty and Validation of Test and Calibration Methods (8 horas) - Solugest</li>
                         <li><span class="fa-li"><i class="fas fa-check"></i></span>2021 - Internal Audits of Laboratory Management System NBR ISO/IEC 17025:2017 (8 horas) - Solugest</li>
