--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <li> Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando LIBS;</li>
                             <li> Coordenação da geração e emissão de laudos comerciais utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (HTML + CSS + JavaScript))</li>
                             <li> Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt).</li>
-                            <li> Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade</li>
+                            <li> Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade de acordo com a VM0042 - VERRA</li>
                             </ul>
                            </div>
                         <div class="flex-shrink-0"><span class="text-primary">Janeiro 2021 - atualmente</span></div>
