--- a/index_us.html
+++ b/index_us.html
@@ -94,7 +94,7 @@
                             <li> Validation of analytical methods (ISO 17025O) using LIBS;</li>
                             <li> Coordination of generation and issuance of commercial reports using graphical tools in Python such as Plotly and Seaborn with web export (HTML + CSS + JavaScript))</li>
                             <li> Member of the Python internal software development team (PySide6/PyQt).</li>
-                            <li> Collaboration in the development of inventories for carbon credits with the sustainability team</li>
+                            <li> Collaboration in the development of inventories for carbon credits with the sustainability team according to VM0042 - VERRA</li>
                             </ul>
                            </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021 January - currently</span></div>
