Atualização do cargo

--- a/index.html
+++ b/index.html
@@ -86,13 +86,14 @@
                             <h3 class="mb-0">Cientista de dados pleno</h3>
                             <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                             <ul>
-                            <li> Encarregado pela interface entre os dados gerados pelos métodos tradicionais de análise química do solos e a plataforma de inteligência artificial AGLIBS;</li> 
-                            <li> Integrante do time de análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de modelos multivariados de predição, classificação e determinação, 
+                            <li> 2021 - 2022 - Encarregado pela interface entre os dados gerados pelos métodos tradicionais de análise química do solos e a plataforma de inteligência artificial AGLIBS;</li> 
+                            <li> 2021 - 2022 - Integrante do time de análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de modelos multivariados de predição, classificação e determinação, 
                                 exploração de dados temporais e controle estatístico de processos;</li>
-                            <li> Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando LIBS;</li>
-                            <li> Coordenação da geração e emissão de laudos comerciais utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (HTML + CSS + JavaScript))</li>
-                            <li> Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt).</li>
-                            <li> Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade de acordo com a VM0042 - VERRA</li>
+                            <li> 2021 - atualmente - Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando LIBS;</li>
+                            <li> 2021 - atualmente - Coordenação da geração e emissão de laudos comerciais utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (HTML + CSS + JS))</li>
+                            <li> 2021 - atualmente - Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt).</li>
+                            <li> 2023 - atualmente - Integrante do time de desenvolvimento e computação em nuvem (Azure) (</li>
+                            <li> 2022 - atualmente - Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade de acordo com a VM0042 - VERRA</li>
                             </ul>
                            </div>
                         <div class="flex-shrink-0"><span class="text-primary">Janeiro 2021 - atualmente</span></div>
