Atualização de atividades do cargo (en/pt-br)

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <li> 2021 - atualmente - Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando LIBS;</li>
                             <li> 2021 - atualmente - Coordenação da geração e emissão de laudos comerciais utilizando ferramentas gráficas em Python como Plotly e Seaborn com exportação web (HTML + CSS + JS))</li>
                             <li> 2021 - atualmente - Integrante do time de desenvolvimento de softwares internos em Python (PySide6/PyQt).</li>
-                            <li> 2023 - atualmente - Integrante do time de desenvolvimento e computação em nuvem (Azure) (</li>
+                            <li> 2023 - atualmente - Integrante do time de desenvolvimento de computação em nuvem (Azure)</li>
                             <li> 2022 - atualmente - Colaboração no desenvolvimento dos inventários para créditos de carbono junto à equipe de sustentabilidade de acordo com a VM0042 - VERRA</li>
                             </ul>
                            </div>
